--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/header :: header">
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
+</head>f
 
 <body>
 
